--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -21,5 +21,11 @@ pipeline {
                 bat './jenkins/scripts/deliver.bat'
             }
         }
+
+        stage('Complete') {
+            steps {
+                echo 'Job Completed'
+            }
+        }
     }
 }
