--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
         }
         stage('Deliver') {
             steps {
-                bat '/jenkins/scripts/deliver.bat'
+                sh '/jenkins/scripts/deliver.sh'
             }
         }
 
